# TCP-Chat-App

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt  main.cpp
Network/: CMakeLists.txt
Network/include/Network/Client/: TCP_Client.h
Network/include/Network/Server/: TCP_Connect.h  TCP_Server.h
Network/src/Client/: TCP_Client.cpp
Network/src/Server/: TCP_Connect.cpp  TCP_Server.cpp
Server/: CMakeLists.txt  main.cpp
